[gd_scene load_steps=14 format=3 uid="uid://bv1074abebevd"]

[ext_resource type="Script" uid="uid://bv2fxxhc6vu6n" path="res://mainscreen.gd" id="1_kvqn4"]
[ext_resource type="Texture2D" uid="uid://c8l1tjk2x1xl" path="res://icons/temp title.png" id="2_8fn4r"]
[ext_resource type="Texture2D" uid="uid://dcxno6sw1im6q" path="res://icons/temp play.png" id="3_huavm"]
[ext_resource type="Texture2D" uid="uid://bskcnk8ivexnl" path="res://icons/temp options.png" id="4_luk67"]
[ext_resource type="Script" uid="uid://c1txns0f6so4d" path="res://volume_slider.gd" id="5_6of4a"]
[ext_resource type="Texture2D" uid="uid://cdo0bgg22oh22" path="res://icons/temp help.png" id="5_etpox"]
[ext_resource type="Texture2D" uid="uid://lvqp3uacw1g1" path="res://icons/temp exit.png" id="6_hn4n6"]
[ext_resource type="Texture2D" uid="uid://k25rprw6uxyw" path="res://icons/ad1.png" id="7_4ydbd"]
[ext_resource type="Texture2D" uid="uid://csg2552nyv356" path="res://icons/ad2.png" id="8_vue7p"]

[sub_resource type="Gradient" id="Gradient_x1tlb"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qirm2"]
gradient = SubResource("Gradient_x1tlb")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kvqn4"]
bg_color = Color(0.86237, 0.475918, 0.256368, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_n4ag8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_4ydbd")
}, {
"duration": 1.0,
"texture": ExtResource("8_vue7p")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_kvqn4")

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(587.5, 346)
scale = Vector2(4.77734, 740)
texture = SubResource("GradientTexture1D_qirm2")

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(568, 82)
scale = Vector2(0.699585, 0.659375)
texture = ExtResource("2_8fn4r")

[node name="Play" type="Button" parent="."]
offset_left = 401.0
offset_top = 237.0
offset_right = 731.0
offset_bottom = 361.0
icon = ExtResource("3_huavm")
icon_alignment = 1
expand_icon = true

[node name="Level Select" type="Panel" parent="."]
visible = false
z_index = 5
offset_left = 236.0
offset_top = 192.0
offset_right = 885.0
offset_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kvqn4")

[node name="Level Select VBox" type="VBoxContainer" parent="Level Select"]
z_index = 5
layout_mode = 0
offset_top = 12.0
offset_right = 649.0
offset_bottom = 318.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Level Select/Level Select VBox"]
z_index = 7
layout_mode = 2
text = "Episodes"
horizontal_alignment = 1

[node name="Episodes" type="HBoxContainer" parent="Level Select/Level Select VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="BlackMarket" type="Button" parent="Level Select/Level Select VBox/Episodes"]
z_index = 3
layout_mode = 2
size_flags_horizontal = 3
text = "BlackMarket"

[node name="Coming Soon" type="Button" parent="Level Select/Level Select VBox/Episodes"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
text = "COming soon"

[node name="ExitLevels" type="Button" parent="Level Select/Level Select VBox"]
layout_mode = 2
text = "Back"

[node name="Options" type="Button" parent="."]
offset_left = 336.0
offset_top = 377.0
offset_right = 532.0
offset_bottom = 460.0
icon = ExtResource("4_luk67")
icon_alignment = 1
expand_icon = true

[node name="OptionsMenu" type="Panel" parent="."]
visible = false
z_index = 5
offset_left = 243.0
offset_top = 223.0
offset_right = 892.0
offset_bottom = 541.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kvqn4")

[node name="OptionsMenu VBox" type="VBoxContainer" parent="OptionsMenu"]
z_index = 5
layout_mode = 0
offset_top = 12.0
offset_right = 649.0
offset_bottom = 318.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="OptionsMenu/OptionsMenu VBox"]
z_index = 7
layout_mode = 2
text = "Options"
horizontal_alignment = 1

[node name="VolumeSliderVBox" type="VBoxContainer" parent="OptionsMenu/OptionsMenu VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsMenu/OptionsMenu VBox/VolumeSliderVBox"]
layout_mode = 2
text = "Volume"

[node name="Volume Slider" type="HSlider" parent="OptionsMenu/OptionsMenu VBox/VolumeSliderVBox"]
layout_mode = 2
max_value = 1.0
step = 0.05
script = ExtResource("5_6of4a")

[node name="ExitOptions" type="Button" parent="OptionsMenu/OptionsMenu VBox"]
layout_mode = 2
text = "Back"

[node name="Help" type="Button" parent="."]
offset_left = 572.0
offset_top = 373.0
offset_right = 806.0
offset_bottom = 458.0
icon = ExtResource("5_etpox")
icon_alignment = 1
expand_icon = true

[node name="HelpPanel" type="Panel" parent="."]
z_index = 5
offset_left = 236.0
offset_top = 192.0
offset_right = 885.0
offset_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kvqn4")

[node name="HelpVBox" type="VBoxContainer" parent="HelpPanel"]
z_index = 5
layout_mode = 0
offset_top = 12.0
offset_right = 649.0
offset_bottom = 318.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HelpPanel/HelpVBox"]
z_index = 7
layout_mode = 2
text = "Help"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HelpPanel/HelpVBox"]
layout_mode = 2
size_flags_vertical = 3
text = "The black market is a serious problem that can affect anyone—even kids. It involves people secretly buying and selling things without following the law. These things can include unsafe toys, fake electronics, harmful medicine, or even stolen items. While they might seem cheaper or easy to get, they are often dangerous and can hurt you or others. The people behind black market sales don’t care about safety or fairness—they only want to make money, no matter who gets hurt. Getting involved in this kind of illegal activity, even by accident, can lead to serious consequences, including putting yourself or your family at risk. That’s why it’s important to stay away from anything that feels suspicious, and to always buy from trusted, legal sources. If you ever find yourself on the black market, if someone tries to sell you something secretly, or if you’re unsure whether something is safe or legal, talk to a parent, teacher, or another adult you trust right away. You can also report any suspicious activity to the proper authorities. To get help or report a concern, contact your local police department or reach out to Crime Stoppers at 1-800-222-TIPS (8477). You can also visit www.cybertip.ca to report anything unsafe online. Your safety matters. Make smart choices, and say no to the black market.

"

[node name="ExitHelp" type="Button" parent="HelpPanel/HelpVBox"]
layout_mode = 2
text = "Back"

[node name="Exit" type="Button" parent="."]
offset_left = 484.0
offset_top = 541.0
offset_right = 620.0
offset_bottom = 597.0
icon = ExtResource("6_hn4n6")
icon_alignment = 1
expand_icon = true

[node name="Ad1" type="AnimatedSprite2D" parent="."]
position = Vector2(117, 321)
scale = Vector2(0.747986, 1.1217)
sprite_frames = SubResource("SpriteFrames_n4ag8")

[node name="Ad2" type="AnimatedSprite2D" parent="."]
position = Vector2(1008.25, 322.75)
scale = Vector2(0.533248, 0.94311)
sprite_frames = SubResource("SpriteFrames_n4ag8")
frame = 1
frame_progress = 0.545454

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Level Select/Level Select VBox/Episodes/BlackMarket" to="." method="_on_black_market_pressed"]
[connection signal="pressed" from="Level Select/Level Select VBox/ExitLevels" to="." method="_on_exit_levels_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="mouse_exited" from="OptionsMenu/OptionsMenu VBox/VolumeSliderVBox/Volume Slider" to="OptionsMenu/OptionsMenu VBox/VolumeSliderVBox/Volume Slider" method="_on_mouse_exited"]
[connection signal="value_changed" from="OptionsMenu/OptionsMenu VBox/VolumeSliderVBox/Volume Slider" to="OptionsMenu/OptionsMenu VBox/VolumeSliderVBox/Volume Slider" method="_on_value_changed"]
[connection signal="pressed" from="OptionsMenu/OptionsMenu VBox/ExitOptions" to="." method="_on_exit_options_pressed"]
[connection signal="pressed" from="Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="HelpPanel/HelpVBox/ExitHelp" to="." method="_on_exit_help_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
